@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+- Make the GitHub dialect look for fenced code blocks before other types of
+  markup. Otherwise this could parse the _inside_ of a fenced code block as
+  containing some sort of block-level markup like a two-line list. Reported by
+  Frew Schmidt. GitHub #10.
+
+
 0.28   2017-11-21
 
 - Require Moose 2.1802 for full compatibility with Specio.
